--- a/chillax.theme.css
+++ b/chillax.theme.css
@@ -43,7 +43,7 @@
     --background-image: var(--wallpaper);
     --bg-opacity: 100%;
     /*bg dev suggestions*/
-    --wallpaper: url("https://wallpaperaccess.com/full/2799204.jpg");
+    --wallpaper: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fpitter-pattern.com%2Fday-of-the-dead-wallpaper%2F&psig=AOvVaw2HXbm9dhjDGqCgb-CciT2Z&ust=1733199839863000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPCc39eeiIoDFQAAAAAdAAAAABAE");
     /*modern background selection*/
     --modern-dark-bg: url("https://warrayquipsome.github.io/Chillax/Wallpapers/modern-dark-bg.png");
     --modern-light-bg: url("https://warrayquipsome.github.io/Chillax/Wallpapers/modern-light-bg.png");
